--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "sass",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-purgecss": "^5.0.0",
-    "gulp-sass": "^5.1.0",
-    "sass": "^1.69.5"
-  }
+    "name": "sass",
+    "version": "1.0.0",
+    "description": "## Install dependencies ``` npm install gulp ```",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "sass": "sass --watch ./turboo/index.scss:./css/style.css"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "sass": "^1.69.5"
+    }
 }
